refactor resizing; add latency attack test;  add non-stop latency stress test; add javolution test;